Resolve Foreign Key Error